--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="header">
             <nav> 
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="home.html">Trion Bailey</a>
+                    <a class="navbar-brand" href="home.html">Trion Bailey<span class="sr-only">(current)</span></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapse_target" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <nav class="navbar-toggler-icon"></nav>
                     </button>
@@ -27,7 +27,7 @@
                     <nav class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="index.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
