resume and linkedIn links

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <section id="container">
         <section class="header">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="home.html">Trion Bailey<span class="sr-only">(current)</span></a>
+                <a class="navbar-brand" href="index.html">Trion Bailey<span class="sr-only">(current)</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <nav class="navbar-toggler-icon"></nav>
@@ -22,7 +22,7 @@
                 <nav class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">About</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -35,12 +35,19 @@
             </nav>
         </section>
     </section>
-    <div class="jumbotron">
-        <h1 class="display-4">Welcome!</h1>
-        <p class="lead">"THE HIGHEST HUMAN ACT IS TO INSPIRE.”-NH</p>
-        <hr class="my-4">
-        <!-- <img src="images/background.jpeg" alt="coding" width="800px" height="600px"> -->
-      </div>
+    <section class="container">
+        <section class="row">
+            <article class="col-xs-12 card">
+                <section class="card-body1">
+                    <h1 class="card-title"> About Me</h1>
+                    <img src="images/cooldude.jpeg" class="float-left mr-2" width="495" height="400" alt="cooldude">
+                    <p><strong>"A smooth sea never made a skilled sailor"-FDR.</strong></P>
+                      <P> My name is Trion Bailey, and I have a niche for problem solving. I also have a passion for everything fast, from cars and bikes to the movies. I enjoy pushing my limits to see what im truly capable of.
+                    </p>
+                </section>
+            </article>
+        </section>
+    </section> 
 </section>
 </body>
 </html>
