--- a/portfolio.html
+++ b/portfolio.html
@@ -2,56 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=&display=swap" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=&display=swap" rel="stylesheet">
+  <title>Document</title>
 </head>
 <section>
-    <section id="container">
-        <section class="header">
-            <nav>
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="home.html">Trion Bailey<span class="sr-only">(current)</span></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <nav class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="portfolio.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">contact</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </nav>
-            </nav>
-        </section>
+  <section id="container">
+    <section class="header">
+      <nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="index.html">Trion Bailey<span class="sr-only">(current)</span></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <nav class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">contact</a>
+              </li>
+            </ul>
+          </nav>
+        </nav>
+      </nav>
     </section>
-    <section class="container">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, numquam nulla consequatur et, rem quaerat fuga vero dolore quis commodi facere a iusto veniam accusamus sunt veritatis excepturi delectus facilis!</p>
-        <div class="row row-cols-1 row-cols-md-2">
-            <div class="col mb-4">
-              <div class="card">
-                <img src="images/soundtrackmovie.png" class="card-img-top1" alt="soundtrack to that movie website">
-                <div class="card-body">
-                  <h5 class="card-title">Soundtrack to that Movie!</h5>
-                  <a href="https://trionb.github.io/soundtrack-that-movie/" class="btn btn-outline-dark">View Web Page</a>
-                  <a href="https://github.com/trionb?tab=repositories" class="btn btn-outline-dark">Github Rep</a>
-                </div>
-              </div>
-            </div>
-            <!-- <div class="col mb-4">
+  </section>
+  <section class="container">
+    <p>Welcome to my portfolio page. Here youll see some of my finished projects.
+      <a href="images/resume.png" class="btn btn-outline-dark1">Resume</a>
+      <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/"class="btn btn-outline-dark1">linkedIn</a>
+    </p>
+    <div class="row row-cols-1 row-cols-md-2">
+      <div class="col mb-4">
+        <div class="card">
+          <img src="images/soundtrackmovie.png" class="card-img-top1" alt="soundtrack to that movie website">
+          <div class="card-body">
+            <h5 class="card-title">Soundtrack to that Movie!</h5>
+            <a href="https://trionb.github.io/soundtrack-that-movie/" class="btn btn-outline-dark">View Web Page</a>
+            <a href="https://github.com/trionb?tab=repositories" class="btn btn-outline-dark">Github Rep</a>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="col mb-4">
               <div class="card">
                 <img src="images/coding quiz.png" class="card-img-top" alt="Coding Quiz">
                 <div class="card-body">
@@ -61,17 +64,17 @@
                 </div>
               </div>
             </div> -->
-            <div class="col mb-4">
-              <div class="card">
-                <img src="images/passwordgenerator.png" class="card-img-top" alt="random password generator">
-                <div class="card-body">
-                  <h5 class="card-title">Password Generator</h5>
-                  <a href="https://trionb.github.io/homework3/" class="btn btn-outline-dark">View Web Page</a>
-                  <a href="https://github.com/trionb?tab=repositories" class="btn btn-outline-dark">Github Rep</a>
-                </div>
-              </div>
-            </div>
-            <!-- <div class="col mb-4">
+      <div class="col mb-4">
+        <div class="card">
+          <img src="images/passwordgenerator.png" class="card-img-top" alt="random password generator">
+          <div class="card-body">
+            <h5 class="card-title">Password Generator</h5>
+            <a href="https://trionb.github.io/homework3/" class="btn btn-outline-dark">View Web Page</a>
+            <a href="https://github.com/trionb?tab=repositories" class="btn btn-outline-dark">Github Rep</a>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="col mb-4">
               <div class="card">
                 <img src="images/weatherdashboard.png" class="card-img-top" alt="weather forecast">
                 <div class="card-body">
@@ -80,12 +83,12 @@
                 </div>
               </div>
             </div> -->
-          </div>
+    </div>
 
-    </section>
-    <footer>
-        <p>@Copyright</p>
-    </footer>
-    </body>
+  </section>
+  <footer>
+    <p>@Copyright</p>
+  </footer>
+  </body>
 
 </html>
