--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <section id="container">
             <section class="header">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="home.html">Trion Bailey<span class="sr-only">(current)</span></a>
+                    <a class="navbar-brand" href="index.html">Trion Bailey<span class="sr-only">(current)</span></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <nav class="navbar-toggler-icon"></nav>
@@ -25,7 +25,7 @@
                     <nav class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">About</a>
+                                <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="portfolio.html">Portfolio</a>
