--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Document</title>
 </head>
 <section>
@@ -40,8 +41,10 @@
   </section>
   <section class="container">
     <p>Welcome to my portfolio page. Here youll see some of my finished projects.
-      <a href="images/resume.png" class="btn btn-outline-dark1">Resume</a>
-      <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/"class="btn btn-outline-dark1">linkedIn</a>
+      <a href="download/2020resume pdf.pages"class="btn btn-outline-dark1" type="submit"onclick="window.open('file.doc')"download="resume">Resume</a>
+      <!-- <a href="images/resume.png" class="btn btn-outline-dark1">Resume</a> -->
+
+      <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/"class="btn btn-outline-dark1">LinkedIn</a>
     </p>
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col mb-4">
@@ -50,7 +53,7 @@
           <div class="card-body">
             <h5 class="card-title">Soundtrack to that Movie!</h5>
             <a href="https://trionb.github.io/soundtrack-that-movie/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb?tab=repositories" class="btn btn-outline-dark">Github Rep</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
           </div>
         </div>
       </div>
@@ -69,8 +72,8 @@
           <img src="images/passwordgenerator.png" class="card-img-top" alt="random password generator">
           <div class="card-body">
             <h5 class="card-title">Password Generator</h5>
-            <a href="https://trionb.github.io/homework3/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb?tab=repositories" class="btn btn-outline-dark">Github Rep</a>
+            <a href="https://trionb.github.io/passwordGenerator/" class="btn btn-outline-dark">View Web Page</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
           </div>
         </div>
       </div>
