--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,45 +10,51 @@
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-   <section>
-    <section id="container">
-        <section class="header">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="index.html">Trion Bailey<span class="sr-only">(current)</span></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <nav class="navbar-toggler-icon"></nav>
-                </button>
-                <nav class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">contact</a>
-                        </li>
-                    </ul>
+    <section>
+        <section id="container">
+            <section class="header">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <a class="navbar-brand" href="index.html">Trion Bailey<span class="sr-only">(current)</span></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <nav class="navbar-toggler-icon"></nav>
+                    </button>
+                    <nav class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">contact</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </nav>
-            </nav>
+            </section>
+        </section>
+        <section class="container">
+            <section class="row">
+                <article class="col-sm-12 card">
+                    <section class="card-body1">
+                        <h1 class="card-title"> About Me</h1>
+                        <img src="images/cooldude.jpeg" class="float-left mr-2" width="495" height="400" alt="cooldude">
+                        <div class="aboutMe">
+                            <p><strong>"A smooth sea never made a skilled sailor"-FDR.</strong></P>
+                            <P> My name is Trion Bailey, and I have a niche for problem solving. I also have a passion
+                                for everything fast, from cars and bikes to the movies. I enjoy pushing my limits to see
+                                what im truly capable of.
+                            </p>
+                        </div>
+                    </section>
+                </article>
+            </section>
         </section>
     </section>
-    <section class="container">
-        <section class="row">
-            <article class="col-xs-12 card">
-                <section class="card-body1">
-                    <h1 class="card-title"> About Me</h1>
-                    <img src="images/cooldude.jpeg" class="float-left mr-2" width="495" height="400" alt="cooldude">
-                    <p><strong>"A smooth sea never made a skilled sailor"-FDR.</strong></P>
-                      <P> My name is Trion Bailey, and I have a niche for problem solving. I also have a passion for everything fast, from cars and bikes to the movies. I enjoy pushing my limits to see what im truly capable of.
-                    </p>
-                </section>
-            </article>
-        </section>
-    </section> 
-</section>
 </body>
+
 </html>
