--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     </section>
   </section>
   <section class="container">
-    <p>Welcome to my portfolio page. Here youll see some of my finished projects.
+    <p>Welcome to my portfolio page. Here you'll see some of my finished projects.
       <a href="download/2020resume pdf.pages"class="btn btn-outline-dark1" type="submit"onclick="window.open('file.doc')"download="resume">Resume</a>
       <!-- <a href="images/resume.png" class="btn btn-outline-dark1">Resume</a> -->
 
