--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
         <div class="jumbotron">
           <h1 class="display-4">Welcome!</h1>
-          <p class="lead">"THE HIGHEST HUMAN ACT IS TO INSPIRE.”-NH</p>
+          <p class="lead">"THE HIGHEST HUMAN ACT IS TO INSPIRE."-NIPSEY HUSSLE</p>
           <hr class="my-4">
           <!-- <img src="images/background.jpeg" alt="coding" width="800px" height="600px"> -->
         </div>
