--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
   </section>
   <section class="container">
     <p>Welcome to my portfolio page. Here you'll see some of my finished projects.
-      <a href="download/2020resume pdf.pages"class="btn btn-outline-dark1" type="submit"onclick="window.open('file.doc')"download="resume">Resume</a>
+      <a href="download/resume.pdf"class="btn btn-outline-dark1" type="submit"onclick="window.open('file.doc')"download="resume">Resume</a>
       <!-- <a href="images/resume.png" class="btn btn-outline-dark1">Resume</a> -->
 
       <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/"class="btn btn-outline-dark1">LinkedIn</a>
@@ -77,15 +77,15 @@
           </div>
         </div>
       </div>
-      <!-- <div class="col mb-4">
+      <div class="col mb-4">
               <div class="card">
-                <img src="images/weatherdashboard.png" class="card-img-top" alt="weather forecast">
+                <img src="images/Employee Generator.png" class="card-img-top" alt="employeeGenerator">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Employee Generator</h5>
+                  <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
                 </div>
               </div>
-            </div> -->
+            </div>
     </div>
 
   </section>
