--- a/about.html
+++ b/about.html
@@ -45,9 +45,13 @@
                         <img src="images/cooldude.jpeg" class="float-left mr-2" width="495" height="400" alt="cooldude">
                         <div class="aboutMe">
                             <p><strong>"A smooth sea never made a skilled sailor"-FDR.</strong></P>
-                            <P> My name is Trion Bailey. I have a niche for problem solving. I also have a passion
-                                for everything fast, from cars and bikes to the movies. I enjoy pushing my limits to see
-                                what im truly capable of.I am a lover of all music but specifically i enjoy listening to reggae, hip hip/rap and oldies.
+                            <P> HELLO WORLD!  
+                                Who am I? Well i'm just your friendly neighborhood Spider-Man,sorry im not actually him,
+                                but, my name is Trion. I am from Maryland but moved to New Jersey. I have a niche for
+                                problem solving, I also have a passion
+                                for everything fast, from planes to cars,bikes and the movies. I enjoy pushing my limits
+                                to see what im truly capable of. I am a lover of all music but specifically I enjoy
+                                listening to Reggae, Hip Hip/Rap and throw back R&B.
                             </p>
                         </div>
                     </section>
