--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,11 @@
   </section>
   <section class="container">
     <p>Welcome to my portfolio page. Here you'll see some of my finished projects.
-      <a href="download/resume.pdf"class="btn btn-outline-dark1" type="submit"onclick="window.open('file.doc')"download="resume">Resume</a>
+      <a href="download/resume.pdf" class="btn btn-outline-dark1" type="submit" onclick="window.open('file.doc')"
+        download="resume">Resume</a>
       <!-- <a href="images/resume.png" class="btn btn-outline-dark1">Resume</a> -->
 
-      <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/"class="btn btn-outline-dark1">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/" class="btn btn-outline-dark1">LinkedIn</a>
     </p>
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col mb-4">
@@ -78,14 +79,24 @@
         </div>
       </div>
       <div class="col mb-4">
-              <div class="card">
-                <img src="images/Employee Generator.png" class="card-img-top" alt="employeeGenerator">
-                <div class="card-body">
-                  <h5 class="card-title">Employee Generator</h5>
-                  <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
-                </div>
-              </div>
-            </div>
+        <div class="card">
+          <img src="images/Employee Generator.png" class="card-img-top" alt="employeeGenerator">
+          <div class="card-body">
+            <h5 class="card-title">Employee Generator</h5>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <img src="images/note-taker.png" class="card-img-top" alt="random password generator">
+          <div class="card-body">
+            <h5 class="card-title">Password Generator</h5>
+            <a href="https://note-taking12.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
+          </div>
+        </div>
+      </div>
     </div>
 
   </section>
