--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>trionb/aboutMe</title>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
                         <img src="images/cooldude.jpeg" class="float-left mr-2" width="495" height="400" alt="cooldude">
                         <div class="aboutMe">
                             <p><strong>"A smooth sea never made a skilled sailor"-FDR.</strong></P>
-                            <P> HELLO WORLD!  
+                            <P> HELLO WORLD!
                                 Who am I? Well i'm just your friendly neighborhood Spider-Man,sorry im not actually him,
                                 but, my name is Trion. I am from Maryland but moved to New Jersey. I have a niche for
                                 problem solving, I also have a passion
@@ -59,6 +59,9 @@
             </section>
         </section>
     </section>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
