--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Document</title>
+  <title>trionb/portfolio</title>
 </head>
 <section>
   <section id="container">
@@ -40,13 +40,7 @@
     </section>
   </section>
   <section class="container">
-    <p>Welcome to my portfolio page. Here you'll see some of my finished projects.
-      <a href="download/resume.pdf" class="btn btn-outline-dark1" type="submit" onclick="window.open('file.doc')"
-        download="resume">Resume</a>
-      <!-- <a href="images/resume.png" class="btn btn-outline-dark1">Resume</a> -->
-
-      <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/" class="btn btn-outline-dark1">LinkedIn</a>
-    </p>
+    <p>Welcome to my portfolio page.</p>
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col mb-4">
         <div class="card">
@@ -54,27 +48,30 @@
           <div class="card-body">
             <h5 class="card-title">Soundtrack to that Movie!</h5>
             <a href="https://trionb.github.io/soundtrack-that-movie/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
-      <!-- <div class="col mb-4">
-              <div class="card">
-                <img src="images/coding quiz.png" class="card-img-top" alt="Coding Quiz">
-                <div class="card-body">
-                  <h5 class="card-title">Coding Quiz</h5>
-                  <a href="file:///Users/stizz/Desktop/code/homework/homework4/index.html" class="btn btn-outline-dark">View Web Page</a>
-                  <a href="https://github.com/trionb?tab=repositories" class="btn btn-outline-dark">Github Rep</a>
-                </div>
-              </div>
-            </div> -->
+      <div class="col mb-4">
+        <!--  -->
+        <div class="card">
+          <img src="images/fyre.png" class="card-img-top" alt="music">
+          <div class="card-body">
+            <h5 class="card-title">Fyre</h5>
+            <p class="note">Note:A Spotify premium account is needed for the songs to be loaded</p>
+            <a href="https://fathomless-basin-76899.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
+          </div>
+        </div>
+      </div>
+      <!--  -->
       <div class="col mb-4">
         <div class="card">
           <img src="images/passwordgenerator.png" class="card-img-top" alt="random password generator">
           <div class="card-body">
             <h5 class="card-title">Password Generator</h5>
             <a href="https://trionb.github.io/passwordGenerator/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
@@ -83,7 +80,7 @@
           <img src="images/Employee Generator.png" class="card-img-top" alt="employeeGenerator">
           <div class="card-body">
             <h5 class="card-title">Employee Generator</h5>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
@@ -91,18 +88,33 @@
         <div class="card">
           <img src="images/note-taker.png" class="card-img-top" alt="random password generator">
           <div class="card-body">
-            <h5 class="card-title">Password Generator</h5>
+            <h5 class="card-title">Note Taker</h5>
             <a href="https://note-taking12.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Rep</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
+      <!--  -->
+      <div class="col mb-4">
+        <div class="card">
+          <img src="images/Eat-Da-Sushi.png" class="card-img-top" alt="random password generator">
+          <div class="card-body">
+            <h5 class="card-title">Eat-Dat-Sushi</h5>
+            <a href="https://eat-dat-sushi.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
+            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
+          </div>
+        </div>
+      </div>
+      <!--  -->
     </div>
 
   </section>
   <footer>
     <p>@Copyright</p>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
   </body>
 
 </html>
