--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>trion/contact</title>
 </head>
 
 <body>
@@ -38,13 +38,25 @@
                 </nav>
             </section>
         </section>
-        <section class="container">
-            <section class="row">
-                <article class="col-12 card">
-                    <section class="card-body">
-                        <h1 class="card-title"> contact</h1>
-                        <br>
-                        <form>
+        <div class="jumbotron1">
+            <h1 class="display-4">Contact!</h1>
+            <hr class="my-4">
+            <!-- <img src="images/background.jpeg" alt="coding" width="800px" height="600px"> -->
+            <section class="container">
+                <p>
+                    <a href="download/resume.pdf" class="btn btn-outline-dark1" type="submit"
+                        onclick="window.open('download/resume.pdf')" download="resume">Resume</a>
+                    <!-- <a href="download/resume.pdf" download="resume"class="btn btn-outline-dark1" type="submit">Resume</a> -->
+                    <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/"
+                        class="btn btn-outline-dark1">LinkedIn</a>
+                    <a href="mailto: baileytrion@gmail.com" class="btn btn-outline-dark1" target="_blank">Email</a>
+                </p>
+                <section class="row">
+                    <article class="col-8 card">
+                        <section class="card-body">
+                            <h1 class="card-title"> contact</h1>
+                            <br>
+                            <form action="mailto:baileytrion@gmail.com" method="post" enctype="text/plain">
                             <section class="form-group">
                                 <label for="exampleInputname1">Name</label>
                                 <input type="name" class="form-control" id="exampleInputname1"
@@ -63,16 +75,25 @@
                             </section>
                             <section class="form-group form-check">
                             </section>
-                            <button type="button" class="btn btn-info">Submit</button>
-                        </form>
-                    </section>
-                </article>
+                            <button type="button" value="send" class="btn btn-info">Submit</button>
+                            </form>
+                        </section>
+                    </article>
+                </section>
             </section>
-        </section>
+        </div>
     </section>
     <footer>
         <p>@Copyright</p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
