updated css and portfolio

--- a/about.html
+++ b/about.html
@@ -37,30 +37,42 @@
                 </nav>
             </section>
         </section>
-        <section class="container">
-            <section class="row">
-                <article class="col-sm-12 card">
-                    <section class="card-body1">
-                        <h1 class="card-title"> About Me</h1>
-                        <img src="images/cooldude.jpeg" class="float-left mr-2" width="495" height="400" alt="cooldude">
-                        <div class="aboutMe">
-                            <p><strong>"A smooth sea never made a skilled sailor"-FDR.</strong></P>
-                            <P> HELLO WORLD!
-                                Who am I? Well i'm just your friendly neighborhood Spider-Man,sorry im not actually him,
-                                but, my name is Trion. I am from Maryland but moved to New Jersey. I have a niche for
-                                problem solving, I also have a passion
-                                for everything fast, from planes to cars,bikes and the movies. I enjoy pushing my limits
-                                to see what im truly capable of. I am a lover of all music but specifically I enjoy
-                                listening to Reggae, Hip Hip/Rap and throw back R&B.
-                            </p>
-                        </div>
-                    </section>
-                </article>
+        <div class="jumbotron2">
+            <h1 class="display-4">About Me!</h1>
+            <hr class="my-4">
+            <!-- <img src="images/background.jpeg" alt="coding" width="800px" height="600px"> -->
+            <section class="container">
+                <section class="row">
+                    <article class="col-sm-12 card">
+                        <section class="card-body1">
+                            <img src="images/cooldude.jpeg" class="float-left mr-2" width="495" height="400"
+                                alt="cooldude">
+                            <div class="aboutMe">
+                                <p><strong>"A smooth sea never made a skilled sailor"-FDR.</strong></P>
+                                <P> HELLO WORLD!
+                                    Who am I? Well i'm just your friendly neighborhood Spider-Man,sorry im not actually
+                                    him,
+                                    but, my name is Trion. I am from Maryland but moved to New Jersey. I have a niche
+                                    for
+                                    problem solving, I also have a passion
+                                    for everything fast, from planes to cars,bikes and the movies. I enjoy pushing my
+                                    limits
+                                    to see what im truly capable of. I am a lover of all music but specifically I enjoy
+                                    listening to Reggae, Hip Hip/Rap and throw back R&B.
+                                </p>
+                            </div>
+                        </section>
+                    </article>
+                </section>
             </section>
-        </section>
+        </div>
     </section>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
