--- a/contact.html
+++ b/contact.html
@@ -43,20 +43,28 @@
             <hr class="my-4">
             <!-- <img src="images/background.jpeg" alt="coding" width="800px" height="600px"> -->
             <section class="container">
-                <p>
-                    <a href="download/resume.pdf" class="btn btn-outline-dark1" type="submit"
-                        onclick="window.open('download/resume.pdf')" download="resume">Resume</a>
-                    <!-- <a href="download/resume.pdf" download="resume"class="btn btn-outline-dark1" type="submit">Resume</a> -->
-                    <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/"
-                        class="btn btn-outline-dark1">LinkedIn</a>
-                    <a href="mailto: baileytrion@gmail.com" class="btn btn-outline-dark1" target="_blank">Email</a>
-                </p>
                 <section class="row">
                     <article class="col-8 card">
                         <section class="card-body">
                             <h1 class="card-title"> contact</h1>
                             <br>
-                            <form action="mailto:baileytrion@gmail.com" method="post" enctype="text/plain">
+                            <form action="#">
+                                <a href="mailto: baileytrion@gmail.com" class="btn btn-outline-dark1"
+                                    target="_blank">Email</a>
+                                <br>
+                                <br>
+                                <a href="https://github.com/trionb" target="_blank"><i class="fab fa-github"
+                                        class="btn btn-outline-dark1">GitHub</i></a> <br>
+                                <br>
+                                <a href="https://www.linkedin.com/in/trion-bailey-7717811a3/" target="_blank"><i
+                                        class="fab fa-linkedin">LinkedIn</i></a>
+                                <br>
+                                <br>
+                                <a href="download/resume.pdf" class="btn btn-outline-dark1" target="_blank" type="submit"
+                                    onclick="window.open('download/resume.pdf')" download="resume">Resume</a>
+                            </form>
+
+                            <!-- <form action="mailto:baileytrion@gmail.com" method="post" enctype="text/plain">
                             <section class="form-group">
                                 <label for="exampleInputname1">Name</label>
                                 <input type="name" class="form-control" id="exampleInputname1"
@@ -76,16 +84,18 @@
                             <section class="form-group form-check">
                             </section>
                             <button type="button" value="send" class="btn btn-info">Submit</button>
-                            </form>
+                            </form> -->
                         </section>
                     </article>
                 </section>
             </section>
         </div>
+        </div>
     </section>
     <footer>
         <p>@Copyright</p>
     </footer>
+    <script src="https://kit.fontawesome.com/5a764a1829.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
