--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,9 @@
       </nav>
     </section>
   </section>
+  <div class="jumbotron3">
+    <h1 class="display-4">About Me!</h1>
+    <hr class="my-4">
   <section class="container">
     <p>Welcome to my portfolio page.</p>
     <div class="row row-cols-1 row-cols-md-2">
@@ -107,8 +110,8 @@
       </div>
       <!--  -->
     </div>
-
   </section>
+  </div>
   <footer>
     <p>@Copyright</p>
   </footer>
