--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                                         class="fab fa-linkedin">LinkedIn</i></a>
                                 <br>
                                 <br>
-                                <a href="download/resume.pdf" class="btn btn-outline-dark1" target="_blank" type="submit"
+                                <a href="download/Resume (6).pdf" class="btn btn-outline-dark1" target="_blank" type="submit"
                                     onclick="window.open('download/resume.pdf')" download="resume">Resume</a>
                             </form>
 
