--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,8 @@
                                         class="fab fa-linkedin">LinkedIn</i></a>
                                 <br>
                                 <br>
-                                <a href="download/Resume (6).pdf" class="btn btn-outline-dark1" target="_blank" type="submit"
-                                    onclick="window.open('download/resume.pdf')" download="resume">Resume</a>
+                                <a href="download/Resume2020.pdf" class="btn btn-outline-dark1" target="_blank" type="submit"
+                                    onclick="window.open('download/resume2020.pdf')" download="resume2020.pdf">Resume</a>
                             </form>
 
                             <!-- <form action="mailto:baileytrion@gmail.com" method="post" enctype="text/plain">
