updated portfolio and resume

--- a/about.html
+++ b/about.html
@@ -50,15 +50,14 @@
                             <div class="aboutMe">
                                 <p><strong>"A smooth sea never made a skilled sailor"-FDR.</strong></P>
                                 <P> HELLO WORLD!
-                                    Who am I? Well i'm just your friendly neighborhood Spider-Man,sorry im not actually
-                                    him,
-                                    but, my name is Trion. I am from Maryland but moved to New Jersey. I have a niche
+                                     My name is Trion. I am from Maryland but moved to New Jersey. I have a niche
                                     for
-                                    problem solving, I also have a passion
-                                    for everything fast, from planes to cars,bikes and the movies. I enjoy pushing my
+                                    problem solving, a passion
+                                    for everything fast, from jets,to bikes, to cars and the movies. I enjoy pushing my
                                     limits
-                                    to see what im truly capable of. I am a lover of all music but specifically I enjoy
-                                    listening to Reggae, Hip Hip/Rap and throw back R&B.
+                                    to see what I am truly capable of. I am a lover of all music but specifically I enjoy
+                                    listening to Reggae, Hip Hip/Rap and R&B (90s-2000s only).
+                                    I come from a construction background and now I am currently learning Full-Stack Development.
                                 </p>
                             </div>
                         </section>
