--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     </section>
   </section>
   <div class="jumbotron3">
-    <h1 class="display-4">About Me!</h1>
+    <h1 class="display-4">Portolio!</h1>
     <hr class="my-4">
   <section class="container">
     <p>Welcome to my portfolio page.</p>
@@ -51,7 +51,7 @@
           <div class="card-body">
             <h5 class="card-title">Soundtrack to that Movie!</h5>
             <a href="https://trionb.github.io/soundtrack-that-movie/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
+            <a href="https://github.com/trionb/soundtrack-that-movie" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
             <h5 class="card-title">Fyre</h5>
             <p class="note">Note:A Spotify premium account is needed for the songs to be loaded</p>
             <a href="https://fathomless-basin-76899.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
+            <a href="https://github.com/trionb/Fyre" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
           <div class="card-body">
             <h5 class="card-title">Password Generator</h5>
             <a href="https://trionb.github.io/passwordGenerator/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
+            <a href="https://github.com/trionb/passwordGenerator" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
           <img src="images/Employee Generator.png" class="card-img-top" alt="employeeGenerator">
           <div class="card-body">
             <h5 class="card-title">Employee Generator</h5>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
+            <a href="https://github.com/trionb/employeeTracker" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
@@ -93,7 +93,7 @@
           <div class="card-body">
             <h5 class="card-title">Note Taker</h5>
             <a href="https://note-taking12.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
+            <a href="https://github.com/trionb/note-taker" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
@@ -104,7 +104,7 @@
           <div class="card-body">
             <h5 class="card-title">Eat-Dat-Sushi</h5>
             <a href="https://eat-dat-sushi.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
-            <a href="https://github.com/trionb" class="btn btn-outline-dark">Github Repo</a>
+            <a href="https://github.com/trionb/Eat-Dat-Sushi" class="btn btn-outline-dark">Github Repo</a>
           </div>
         </div>
       </div>
