--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
         </div>
     </section>
     <footer>
-        <p>@Copyright</p>
-    </footer>
+        <p>Beloved</p>
+      </footer>
     <script src="https://kit.fontawesome.com/5a764a1829.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
