--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
       <!--  -->
       <div class="col mb-4">
         <div class="card">
-          <img src="images/Eat-Da-Sushi.png" class="card-img-top" alt="random password generator">
+          <img src="images/eatDatSushi.png" class="card-img-top" alt="random password generator">
           <div class="card-body">
             <h5 class="card-title">Eat-Dat-Sushi</h5>
             <a href="https://eat-dat-sushi.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
@@ -109,6 +109,18 @@
         </div>
       </div>
       <!--  -->
+        <!--  -->
+        <div class="col mb-4">
+          <div class="card">
+            <img src="images/solveStaking.png" class="card-img-top" alt="Solve Staking">
+            <div class="card-body">
+              <h5 class="card-title">Eat-Dat-Sushi</h5>
+              <a href="https://solvestaking.herokuapp.com/" class="btn btn-outline-dark">View Web Page</a>
+              <a href="https://github.com/trionb/honey.stake" class="btn btn-outline-dark">Github Repo</a>
+            </div>
+          </div>
+        </div>
+        <!--  -->
     </div>
   </section>
   </div>
